# privacy-policy-summarizer

./: README.md  Taskfile.yml  pyproject.toml
