[tool.poetry]
name = "privacy-policy-summarizer"
version = "0.1.0"
description = ""
authors = ["irangareddy <itsmerr17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.29.0"
gradio = "^4.12.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.12.0"